# lab06

./: .gitignore
.github/workflows/: CI-CD.yml  MakeDebPackage.yml  MakeDnDPackage.yml
scripts/: buildFormatterExLib.sh  buildSolverApplication.sh  buildSolverLib.sh  debianPackage.sh  dragndropPackage.sh
solver_application/: .CMakeLists.txt.swp  CMakeLists.txt
solver_application/sources/: equation.cpp
